# actor-rs

./: Cargo.toml  LICENSE  README.md
actor/: Cargo.toml
actor-cluster/: Cargo.toml  cluster.toml  reference.toml
actor-cluster-sharding/: Cargo.toml  cluster-sharding.toml
actor-cluster-sharding/src/: cluster_sharding.rs  cluster_sharding_guardian.rs  cluster_sharding_settings.rs  handoff_stopper.rs  lib.rs  message_extractor.rs  shard.rs  shard_allocation_strategy.rs  shard_coordinator.rs  shard_region.rs
actor-cluster-sharding/src/cluster_sharding_guardian/: mod.rs  start.rs  start_coordinator_if_needed.rs  start_proxy.rs  started.rs
actor-cluster-sharding/src/config/: cluster_sharding_config.rs  mod.rs  passivation.rs
actor-cluster-sharding/src/entity_passivation_strategy/: disabled_entity_passivation_strategy.rs  idle_entity_passivation_strategy.rs  mod.rs  recency_list.rs
actor-cluster-sharding/src/handoff_stopper/: entity_terminated.rs  mod.rs  stop_timeout.rs  stop_timeout_warning.rs
actor-cluster-sharding/src/shard/: cluster_event.rs  cluster_event_wrap.rs  entities.rs  entity_state.rs  entity_terminated.rs  handoff.rs  handoff_stopper_terminated.rs  mod.rs  passivate.rs  passivate_interval_tick.rs  shard_buffer_envelope.rs  shard_envelope.rs
actor-cluster-sharding/src/shard_allocation_strategy/: cluster_shard_allocation.rs  least_shard_allocation_strategy.rs  mod.rs
actor-cluster-sharding/src/shard_coordinator/: allocate_shard_result.rs  begin_handoff_ack.rs  coordinator_state.rs  etcd_resp.rs  get_shard_home.rs  graceful_shutdown_req.rs  mod.rs  rebalance_done.rs  rebalance_result.rs  rebalance_tick.rs  region_stopped.rs  register.rs  register_proxy.rs  resend_shard_host.rs  shard_region_proxy_terminated.rs  shard_region_terminated.rs  shard_started.rs  shard_stopped.rs  state.rs  state_update.rs  stop_shard_timeout.rs  stop_shards.rs  terminate_coordinator.rs  update_failed.rs
actor-cluster-sharding/src/shard_region/: begin_handoff.rs  cluster_event.rs  cluster_event_wrap.rs  coordinator_terminated.rs  deliver_target.rs  graceful_shutdown.rs  graceful_shutdown_timeout.rs  handoff.rs  host_shard.rs  mod.rs  register_ack.rs  register_retry.rs  retry.rs  shard_entity_envelope.rs  shard_envelope.rs  shard_home.rs  shard_homes.rs  shard_initialized.rs  shard_region_buffer_envelope.rs  shard_region_terminated.rs  shard_terminated.rs
actor-cluster-tools/: Cargo.toml  reference.toml
actor-cluster-tools/src/: lib.rs
actor-cluster-tools/src/config/: mod.rs  pub_sub_config.rs  singleton_config.rs  singleton_proxy_config.rs
actor-cluster-tools/src/pubsub/: distributed_pub_sub.rs
actor-cluster-tools/src/singleton/: cluster_singleton_manager.rs  cluster_singleton_proxy.rs  mod.rs
actor-cluster/src/: cluster.rs  cluster_config.rs  cluster_daemon.rs  cluster_event.rs  cluster_heartbeat.rs  cluster_node.rs  cluster_provider.rs  cluster_read_view.rs  cluster_setting.rs  cluster_settings.rs  cluster_state.rs  distributed_pub_sub.rs  downing_provider.rs  etcd_watcher.rs  ewatcher.rs  gossip.rs  key_watcher.rs  lease_keeper.rs  lib.rs  member.rs  membership_state.rs  on_member_status_changed_listener.rs  reachability.rs  unique_address.rs  vector_clock.rs
actor-cluster/src/cluster/: cluster.rs  cluster_provider.rs  cluster_setting.rs  cluster_singleton_manager.rs  mod.rs  shard_region.rs
actor-cluster/src/cluster_core_daemon/: exiting_completed_req.rs  leave.rs  member_keep_alive_failed.rs  member_watch_resp.rs  mod.rs  self_leaving.rs  self_removed.rs  watch_failed.rs
actor-cluster/src/cluster_core_supervisor/: core_daemon_terminated.rs  get_cluster_core_ref.rs  mod.rs
actor-cluster/src/cluster_daemon/: add_on_member_removed_listener.rs  add_on_member_up_listener.rs  get_cluster_core_ref_req.rs  lease_failed.rs  leave.rs  leave_cluster.rs  leave_req.rs  member_keep_alive_failed.rs  member_watch_resp.rs  mod.rs  self_down.rs  self_leaving.rs  self_removed.rs  watch_resp_wrap.rs
actor-cluster/src/config/: mod.rs  settings.rs
actor-cluster/src/coordinated_shutdown_leave/: cluster_event.rs  cluster_event_wrap.rs  leave_resp.rs  mod.rs
actor-cluster/src/etcd_actor/: cancel_keep_alive.rs  cancel_lock.rs  delete.rs  etcd_cmd_resp.rs  get.rs  keep_alive.rs  keep_alive_failed.rs  keeper.rs  keeper_keep_alive_failed.rs  lease.rs  lock.rs  mod.rs  poll_keep_alive_resp.rs  poll_watch_resp.rs  put.rs  unlock.rs  unwatch.rs  watch.rs  watch_started.rs  watcher.rs
actor-cluster/src/etcd_watcher/: cancel_watch.rs  mod.rs  poll_message.rs  retry_watch.rs  watch_resp.rs
actor-cluster/src/heartbeat/: mod.rs
actor-cluster/src/lease_keeper/: keep_alive_tick.rs  lease_keep_alive_failed.rs  lease_revoke.rs  mod.rs
actor-cluster/src/message/: join.rs  leave.rs
actor-cluster/src/on_member_status_changed_listener/: mod.rs  (+3 more)
actor-core/: Cargo.toml  core.toml  reference.json  reference.toml
actor-core/src/: context.rs  decoder.rs  error.rs  ext.rs  indirect_actor_producer.rs  lib.rs  promise.rs  props.rs  settings.rs
actor-derive/: Cargo.toml
actor-derive/src/: as_any.rs  codec.rs  lib.rs  message.rs  metadata.rs  serialize_message.rs
actor-playgroud/: Cargo.toml
actor-playgroud/src/: fibonacci.rs  main.rs  multi_node.rs  node.rs  remote_watch.rs  sharding.rs  singleton.rs  supervisor.rs
actor-remote/: Cargo.toml  reference.json  reference.toml  remote.toml
actor-remote/src/: codec.rs  lib.rs  message_registration.rs  remote_actor_ref.rs  remote_provider.rs  remote_setting.rs  remote_settings.rs  remote_watcher.rs
actor/src/: actor_path.rs  address.rs  context.rs  decoder.rs  ext.rs  lib.rs  props.rs  root_guardian.rs  system.rs  system_guardian.rs  user_guardian.rs
crates/kairo-cluster/: Cargo.toml
crates/kairo-cluster-sharding/: Cargo.toml
crates/kairo-cluster-tools/: Cargo.toml  tools.toml
crates/kairo-derive/: Cargo.toml
crates/kairo-playgroud/: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
kairo-playgroud/: Cargo.toml
kairo-playgroud/src/: fibonacci.rs  main.rs  multi_node.rs  sharding.rs  singleton.rs  supervisor.rs
(+707 files in other folders)
