[workspace]
members = ["actor-*"]

resolver = "2"

[workspace.dependencies]
enum_dispatch = "0.3"
tokio = "1.3"
tokio-util = "0.7"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
etcd-client = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "2.0.0-rc.3"
bytes = "1.5"
stubborn-io = "0.3"
dashmap = "5.5"
ahash = "0.8.6"
url = "2.4"
rand = "0.8"
quick_cache = "0.4.0"
async-trait = "0.1"
arc-swap = "1.6"
dyn-clone = "1.0"
ctor = "0.2"
regex = "1.10"
typed-builder = "0.18"
serde = "1.0"
serde_json = "1.0"
clap = "4.4"
toml = "0.8"
pin-project = "1.1"