[workspace]
members = ["actor-*"]

resolver = "2"

[profile.dev.package.backtrace]
opt-level = 3

[workspace.dependencies]
enum_dispatch = "0.3"
tokio = "1.3"
tokio-util = "0.7"
anyhow = "1.0"
futures = "0.3"
etcd-client = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "2.0.0-rc.3"
bytes = "1.5"
stubborn-io = "0.3"
dashmap = "5.5"
ahash = "0.8"
url = "2.4"
rand = "0.8"
quick_cache = "0.4"
async-trait = "0.1"
arc-swap = "1.6"
dyn-clone = "1.0"
ctor = "0.2"
regex = "1.10"
typed-builder = "0.18"
serde = "1.0"
serde_json = "1.0"
clap = "4.4"
toml = "0.8"
pin-project = "1.1"
imstr = "0.2"
itertools = "0.12"
uuid = "1.7"
parking_lot = "0.12"
quinn = "0.10"
rcgen = "0.12"
rustls = { version = "0.21", default-features = false }
config = "0.14"
sha2 = "0.10"

[profile.release]
debug = "line-tables-only"