[workspace]
members = ["kairo-*"]

resolver = "2"

[profile.dev.package.backtrace]
opt-level = 3

[workspace.dependencies]
enum_dispatch = "0.3"
tokio = "1.3"
tokio-util = "0.7.16"
anyhow = "1.0.100"
futures = "0.3.31"
etcd-client = "0.17.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
bincode = "2.0.1"
bytes = "1.5"
stubborn-io = "0.3.5"
dashmap = "6.1.0"
ahash = "0.8.12"
url = "2.4"
rand = "0.9.2"
quick_cache = "0.6.16"
async-trait = "0.1"
arc-swap = "1.6"
dyn-clone = "1.0.20"
ctor = "0.6.0"
regex = "1.10"
typed-builder = "0.22.0"
serde = "1.0.228"
serde_json = "1.0.145"
clap = "4.5.49"
toml = "0.9.8"
pin-project = "1.1.10"
imstr = "0.2.0"
itertools = "0.14.0"
uuid = "1.18.1"
parking_lot = "0.12.5"
quinn = "0.10.2"
rcgen = "0.12.1"
rustls = { version = "0.21.12", default-features = false }
config = "0.15.18"
sha2 = "0.10.9"

[profile.release]
debug = "line-tables-only"
