[package]
name = "actor-cluster-sharding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core" }
actor-remote = { path = "../actor-remote" }
actor-derive = { path = "../actor-derive" }
bincode = { workspace = true }
anyhow = { workspace = true }