[package]
name = "actor-cluster-sharding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core" }
actor-remote = { path = "../actor-remote" }
actor-cluster = { path = "../actor-cluster" }
actor-cluster-tools = { path = "../actor-cluster-tools" }
actor-derive = { path = "../actor-derive" }
bincode = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
typed-builder = { workspace = true }
toml = { workspace = true }
dyn-clone = { workspace = true }
