[package]
name = "actor-cluster-sharding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core", features = ["derive"] }
actor-remote = { path = "../actor-remote" }
actor-cluster = { path = "../actor-cluster" }
actor-cluster-tools = { path = "../actor-cluster-tools" }
tokio = { workspace = true, features = ["full"] }
bincode = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
ahash = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
typed-builder = { workspace = true }
toml = { workspace = true }
dyn-clone = { workspace = true }
enum_dispatch = { workspace = true }
imstr = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
config = { workspace = true }
