[package]
name = "actor-cluster-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core" }
actor-derive = { path = "../actor-derive" }
async-trait = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
tracing = { workspace = true }
anyhow = { workspace = true }
