[package]
name = "actor-cluster-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core", features = ["derive"] }
actor-cluster = { path = "../actor-cluster" }
async-trait = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
tracing = { workspace = true }
eyre = { workspace = true }
typed-builder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bincode = { workspace = true }
config = { workspace = true }
