[package]
name = "actor-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core" }
actor-remote = { path = "../actor-remote" }
actor-derive = { path = "../actor-derive" }
bincode = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
etcd-client = { workspace = true }
typed-builder = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true, features = ["inline"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }