[package]
name = "actor-cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core", features = ["derive"] }
actor-remote = { path = "../actor-remote" }
bincode = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
etcd-client = { workspace = true }
typed-builder = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
ahash = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
config = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
