[package]
name = "actor-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-derive = { path = "../actor-derive" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "time"] }
enum_dispatch = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
etcd-client = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
stubborn-io = { workspace = true }
dashmap = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time"] }
moka = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
arc-swap = { workspace = true }
dyn-clone = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }