[package]
name = "actor-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-derive = { path = "../actor-derive" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["time"] }
enum_dispatch = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time", "env-filter"] }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
bytes = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
ahash = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
arc-swap = { workspace = true }
dyn-clone = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
pin-project = { workspace = true }
config = { workspace = true }
parking_lot = { workspace = true }
imstr = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["display", "deref", "deref_mut", "constructor"] }
itertools = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }

[features]
derive = []
tokio-tracing = ["tokio/tracing"]
