[package]
name = "actor-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
proc-macro-crate = "2"
strum = { version = "0.25", features = ["derive"] }