[package]
name = "actor-playgroud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core" }
actor-remote = { path = "../actor-remote" }
actor-derive = { path = "../actor-derive" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec"] }