[package]
name = "actor-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core" }
actor-derive = { path = "../actor-derive" }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
anyhow = { workspace = true }
moka = { workspace = true, features = ["sync"] }
stubborn-io = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time"] }
thiserror = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }