[package]
name = "actor-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core" }
actor-derive = { path = "../actor-derive" }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
eyre = { workspace = true }
quick_cache = { workspace = true }
stubborn-io = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time"] }
async-trait = { workspace = true }
bincode = { workspace = true }
typed-builder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
quinn = { workspace = true, features = ["futures-io"] }
rcgen = { workspace = true }
rustls = { workspace = true }
config = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }