[package]
name = "actor-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-core = { path = "../actor-core", features = ["derive"] }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
anyhow = { workspace = true }
quick_cache = { workspace = true }
stubborn-io = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time"] }
bincode = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
config = { workspace = true }
imstr = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
