[package]
name = "actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor-derive = { path = "../actor-derive" }
enum_dispatch = "0.3.12"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.33", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
etcd-client = "0.12"
tracing = "0.1"
bincode = "1.3"
bytes = "1.5"
stubborn-io = "0.3"
dashmap = "5.5"
url = "2.4"
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
moka = { version = "0.12", features = ["sync"] }
async-trait = "0.1.74"
arc-swap = "1.6"

[dev-dependencies]
ctor = "0.2"