[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor = { path = "../actor" }
actor-derive = { path = "../actor-derive" }
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.190", features = ["derive"] }
