[package]
name = "kairo-cluster-sharding"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kairo-core = { path = "../kairo-core", features = ["derive"] }
kairo-remote = { path = "../kairo-remote" }
kairo-cluster = { path = "../kairo-cluster" }
kairo-cluster-tools = { path = "../kairo-cluster-tools" }
tokio = { workspace = true, features = ["full"] }
bincode = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
ahash = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
typed-builder = { workspace = true }
toml = { workspace = true }
dyn-clone = { workspace = true }
enum_dispatch = { workspace = true }
imstr = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
config = { workspace = true }
