[package]
name = "kairo-cluster-tools"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kairo-core = { workspace = true, features = ["derive"] }
kairo-cluster = { workspace = true }
async-trait = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true, features = ["inline"] }
tracing = { workspace = true }
anyhow = { workspace = true }
typed-builder = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
bincode = { workspace = true }
config = { workspace = true }
