[package]
name = "kairo-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"
proc-macro-crate = "3"