[package]
name = "kairo-playgroud"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kairo-core = { workspace = true, features = ["derive"] }
kairo-remote = { workspace = true }
kairo-cluster = { workspace = true }
kairo-cluster-tools = { workspace = true }
kairo-cluster-sharding = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time", "env-filter"] }
bincode = { workspace = true }
etcd-client = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rand = { workspace = true }
futures = { workspace = true }

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "supervisor"
path = "src/supervisor.rs"

[[bin]]
name = "singleton"
path = "src/singleton.rs"

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "sharding"
path = "src/sharding.rs"

[[bin]]
name = "remote_watch"
path = "src/remote_watch.rs"

[[bin]]
name = "multi_node"
path = "src/multi_node.rs"
